# VoxelEvaEngine

./: .gitignore  CMakeLists.txt
Editor/src/: EditorLayer.cpp  EditorLayer.h  main.cpp
Editor/src/Editor/: EditorApplication.cpp  EditorApplication.h  EditorImGuiLayer.cpp  EditorImGuiLayer.h  EditorSelection.h  EditorState.h
Editor/src/Editor/Panels/: AssetBrowserPanel.cpp  AssetBrowserPanel.h  ConsolePanel.cpp  ConsolePanel.h  InspectorPanel.cpp  InspectorPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  ViewportPanel.cpp  ViewportPanel.h
Editor/src/Editor/Tools/: AssetPlacementTool.cpp  AssetPlacementTool.h
Engine/Scenes/: test.eva
Engine/assets/shaders/cache/vulkan/: VoxelPicking.glsl.frag  VoxelPicking.glsl.vert  triangle.glsl.frag  triangle.glsl.vert
Engine/assets/shaders/src/: VoxelPicking.glsl  triangle.glsl
Engine/src/Engine/Assets/: Asset.h  AssetImporter.cpp  AssetImporter.h  AssetManager.cpp  AssetManager.h  AssetMetadata.h  Assethandle.h
Engine/src/Engine/Assets/Loaders/: VoxelAssetLoader.cpp  VoxelAssetLoader.h
Engine/src/Engine/Core/: Application.cpp  Application.h  Assert.h  Base.h  EntryPoint.h  Event.h  Formatters.h  Input.h  Instrumentor.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Timestep.h  Window.cpp  Window.h
Engine/src/Engine/Core/Editor/: EditorConsole.cpp  EditorConsole.h  EditorConsoleSink.h
Engine/src/Engine/Core/Events/: ApplicationEvent.h  KeyEvent.h  MouseEvent.h
Engine/src/Engine/Platform/: WindowsInput.cpp  WindowsWindow.cpp  WindowsWindow.h
Engine/src/Engine/Platform/Vulkan/: VulkanCommandBuffers.cpp  VulkanCommandBuffers.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanContext.cpp  VulkanContext.h  VulkanDebugMessenger.cpp  VulkanDebugMessenger.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanPipelineSpecification.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShader.cpp  VulkanShader.h  VulkanShaderModule.cpp  VulkanShaderModule.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanSyncObjects.cpp  VulkanSyncObjects.h  VulkanViewportImage.cpp  VulkanViewportImage.h
Engine/src/Engine/Platform/Vulkan/VulkanUtils/: VoxelPickingUtils.h  VulkanUtils.cpp  VulkanUtils.h
Engine/src/Engine/Platform/Windows/: FileDialogs.h  WindowsFileDialogs.cpp
Engine/src/Engine/Renderer/: GameRenderer.cpp  GameRenderer.h  GraphicsContext.h  RenderTarget.h  SceneRenderer.cpp  SceneRenderer.h  ViewportPickResult.h  VoxelPickID.h
Engine/src/Engine/Renderer/Camera/: CameraPushConstants.h  EditorCamera.cpp  EditorCamera.h
Engine/src/Engine/Renderer/Mesh/: Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h
Engine/src/Engine/Renderer/Vulkan/: VulkanMeshBuffer.cpp  VulkanMeshBuffer.h  VulkanPickingRenderTarget.cpp  VulkanPickingRenderTarget.h  VulkanSwapchainRenderTarget.cpp  VulkanSwapchainRenderTarget.h  VulkanViewportRenderTarget.cpp  VulkanViewportRenderTarget.h
Engine/src/Engine/Scene/: Entity.cpp  Entity.h  Entity.inl  Scene.cpp  Scene.h  SceneTypes.h
Engine/src/Engine/Scene/Components/Core/: IDComponent.h  TagComponent.h  TransformComponent.h
Engine/src/Engine/Scene/Components/Rendering/: VoxelRendererComponent.h
Engine/src/Engine/Scene/SceneSerializer/: SceneSerializer.cpp  SceneSerializer.h
Engine/src/Engine/Voxel/: Voxel.h  VoxelAsset.h  VoxelChunk.cpp  VoxelChunk.h  VoxelMesher.cpp  VoxelMesher.h
Game/src/: main.cpp
Scripts/: build-editor.bat  build-game.bat  build_debug.bat  clean_build.bat  generate_vs2022.bat  regenerate_and_build_debug.bat
Server/src/: main.cpp
